@startuml
abstract class com.pluralsight.vehicles.Truck {
}
abstract class com.pluralsight.vehicles.SUV {
}
class com.pluralsight.vehicles.Vehicle {
- String vehicleVIN
- String vehicleType
- String make
- String model
- String vehicleColor
- int vehicleYear
- int vehicleMileage
- double vehiclePrice
+ String getVehicleVIN()
+ void setVehicleVIN(String)
+ String getVehicleType()
+ void setVehicleType(String)
+ String getMake()
+ void setMake(String)
+ String getModel()
+ void setModel(String)
+ String getVehicleColor()
+ void setVehicleColor(String)
+ int getVehicleYear()
+ void setVehicleYear(int)
+ int getVehicleMileage()
+ void setVehicleMileage(int)
+ double getVehiclePrice()
+ void setVehiclePrice(double)
+ String toString()
}


abstract class com.pluralsight.vehicles.Crossover {
}
abstract class com.pluralsight.vehicles.Sedan {
}


com.pluralsight.vehicles.Vehicle <|-- com.pluralsight.vehicles.Truck
com.pluralsight.vehicles.Vehicle <|-- com.pluralsight.vehicles.SUV
com.pluralsight.vehicles.Vehicle <|-- com.pluralsight.vehicles.Crossover
com.pluralsight.vehicles.Vehicle <|-- com.pluralsight.vehicles.Sedan
@enduml